--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -57,23 +57,6 @@ p, li { white-space: pre-wrap; }
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:8pt; text-decoration: underline;&quot;&gt;Player 1:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
-   <widget class="QTextBrowser" name="p1Breakdown">
-    <property name="geometry">
-     <rect>
-      <x>800</x>
-      <y>0</y>
-      <width>191</width>
-      <height>111</height>
-     </rect>
-    </property>
-    <property name="html">
-     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; text-decoration: underline;&quot;&gt;Point Breakdown:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
@@ -136,7 +119,7 @@ p, li { white-space: pre-wrap; }
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>0</string>
     </property>
    </widget>
    <widget class="QLabel" name="p1Water">
@@ -149,7 +132,7 @@ p, li { white-space: pre-wrap; }
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>0</string>
     </property>
    </widget>
    <widget class="QLabel" name="p1Sugar">
@@ -162,7 +145,7 @@ p, li { white-space: pre-wrap; }
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>0</string>
     </property>
    </widget>
    <widget class="QLabel" name="p1Money">
@@ -175,7 +158,7 @@ p, li { white-space: pre-wrap; }
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>0</string>
     </property>
    </widget>
    <widget class="QTextBrowser" name="p2Breakdown">
@@ -255,7 +238,7 @@ p, li { white-space: pre-wrap; }
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>0</string>
     </property>
    </widget>
    <widget class="QLabel" name="p2Money">
@@ -268,7 +251,7 @@ p, li { white-space: pre-wrap; }
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>0</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_6">
@@ -307,7 +290,7 @@ p, li { white-space: pre-wrap; }
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>0</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_8">
@@ -333,7 +316,7 @@ p, li { white-space: pre-wrap; }
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>0</string>
     </property>
    </widget>
    <widget class="QTextBrowser" name="p2TextBrowser">
@@ -389,7 +372,7 @@ p, li { white-space: pre-wrap; }
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>0</string>
     </property>
    </widget>
    <widget class="QLabel" name="p3Money">
@@ -402,7 +385,7 @@ p, li { white-space: pre-wrap; }
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>0</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_15">
@@ -428,7 +411,7 @@ p, li { white-space: pre-wrap; }
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>0</string>
     </property>
    </widget>
    <widget class="QTextBrowser" name="p3TextBrowser">
@@ -471,7 +454,7 @@ p, li { white-space: pre-wrap; }
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string>0</string>
     </property>
    </widget>
    <widget class="QLabel" name="turnLabel">
@@ -819,7 +802,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QLabel" name="p1TotSugar">
@@ -832,7 +815,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QLabel" name="p1TotWater">
@@ -845,7 +828,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_33">
@@ -897,7 +880,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QLabel" name="p1UsedWater">
@@ -910,7 +893,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QLabel" name="p1UsedMoney">
@@ -923,7 +906,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QLabel" name="p2UsedMoney">
@@ -936,7 +919,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QLabel" name="p2TotMoney">
@@ -949,7 +932,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QLabel" name="p2UsedWater">
@@ -962,7 +945,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_22">
@@ -1014,7 +997,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_37">
@@ -1040,7 +1023,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QLabel" name="p2UsedSugar">
@@ -1053,7 +1036,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_36">
@@ -1131,7 +1114,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QLabel" name="p3TotMoney">
@@ -1144,7 +1127,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="Line" name="line_17">
@@ -1170,7 +1153,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_44">
@@ -1196,7 +1179,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="Line" name="line_16">
@@ -1222,7 +1205,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QLabel" name="p3UsedMoney">
@@ -1235,7 +1218,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QLabel" name="totMoneyLabel">
@@ -1248,7 +1231,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QLabel" name="totWaterLabel">
@@ -1261,7 +1244,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="QLabel" name="totSugarLabel">
@@ -1274,7 +1257,7 @@ p, li { white-space: pre-wrap; }
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>0</string>
      </property>
     </widget>
     <widget class="Line" name="line_18">
@@ -1371,12 +1354,28 @@ p, li { white-space: pre-wrap; }
      <string>idk</string>
     </property>
    </widget>
+   <widget class="QTextBrowser" name="p1Breakdown">
+    <property name="geometry">
+     <rect>
+      <x>800</x>
+      <y>0</y>
+      <width>191</width>
+      <height>111</height>
+     </rect>
+    </property>
+    <property name="html">
+     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; text-decoration: underline;&quot;&gt;Point Breakdown:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
    <zorder>p3TextBrowser</zorder>
    <zorder>p2TextBrowser</zorder>
    <zorder>gameBoard</zorder>
    <zorder>p1Graph</zorder>
    <zorder>p1TextBrowser</zorder>
-   <zorder>p1Breakdown</zorder>
    <zorder>label</zorder>
    <zorder>label_2</zorder>
    <zorder>label_3</zorder>
@@ -1418,6 +1417,7 @@ p, li { white-space: pre-wrap; }
    <zorder>infoBrowser</zorder>
    <zorder>statusbar</zorder>
    <zorder>status_label</zorder>
+   <zorder>p1Breakdown</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
